Refactor naming of the interface.

--- a/SemVersionLib/SemVersionLib.csproj
+++ b/SemVersionLib/SemVersionLib.csproj
@@ -44,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Interface1.cs" />
+    <Compile Include="Calculator.cs" />
+    <Compile Include="IArithmetic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
