--- a/SemVersionLib/SemVersionLib.csproj
+++ b/SemVersionLib/SemVersionLib.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="GitVersion.yml" />
     <None Include="packages.config" />
     <None Include="README.md" />
   </ItemGroup>
