--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,9 @@
+next-version: 1.0
 mode: ContinuousDelivery
 assembly-informational-format: '{FullSemVer}.{ShortSha}'
 branches: 
     feature:
+        increment: None
         track-merge-target: false
 ignore:
   sha: []
