--- a/SemVersionLib/SemVersionLib.csproj
+++ b/SemVersionLib/SemVersionLib.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="README.md" />
+    <None Include="SemVersionLib.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
