--- a/SemVersionLib/packages.config
+++ b/SemVersionLib/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GitVersionTask" version="5.0.0" targetFramework="net462" developmentDependency="true" />
+  <package id="NuGet.Build" version="2.12.1" targetFramework="net462" />
+  <package id="NuGet.CommandLine" version="4.9.4" targetFramework="net462" developmentDependency="true" />
 </packages>
