Fix issued raised in PR #2
Fix version generated on develop branch
Auto build nuget packages and publish them.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
 - task: CopyFiles@2
   inputs:
     sourceFolder: './$(mainProject)/bin/$(buildConfiguration)'
-    contents: '*.dll'
+    contents: '*.nupkg'
     targetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
