--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,5 +1,7 @@
 assembly-informational-format: '{NuGetVersionV2}'
 branches: 
+    develop:
+        increment: Patch
     feature:
         mode: ContinuousDeployment
         increment: Patch
